--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel='stylesheet' type='text/css' href='css/semblance.css'>
+		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
 	<body>
 		<div id="intro">
 		</div>
 		<div id="gallery">
+			<div id="galleryhead">
+				gallery
+			</div>
 			<div id="arrowleft">
 			</div>
 			<div id="arrowright">
@@ -25,6 +29,9 @@
 			</div>
 		</div>
 		<div id="events">
+			<div id="eventshead">
+				events
+			</div>	
 			<div id="event1">
 			</div>
 			<div id="event2">
@@ -35,10 +42,16 @@
 			</div>
 		</div>
 		<div id="members">
+			<div id="membershead">
+				members
+			</div>
 			<div id="memberinfo">
 			</div>
 		</div>
 		<div id="contact">
+			<div id="contacthead">
+				contact us
+			</div>
 			<div id="contactinfo">
 			</div>
 			<div id="contactbottom">
