--- a/index.html
+++ b/index.html
@@ -3,10 +3,19 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>Semblance</title>
+		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Cormorant+Unicase|Dorsa|Open+Sans+Condensed:300|Six+Caps|Zilla+Slab+Highlight" rel="stylesheet">
+
+
+
+
+
+
 		<link rel='stylesheet' type='text/css' href='css/semblance.css'>
 	</head>
 	<body>
 		<div id="intro">
+			<div id="messenger">WELCOME</div>
 		</div>
 		<div id="gallery">
 			<div id="arrowleft">
