logo animation on cover

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 	<body>
 		<div id="intro">
 			<div id="messenger">WELCOME</div>
+			<img id="logo" src="dramalogo.jpg">
 		</div>
 		<div id="gallery">
 			<div id="galleryhead">
