Made the cover page

--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Semblance</title>
 		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Cormorant+Unicase|Dorsa|Open+Sans+Condensed:300|Six+Caps|Zilla+Slab+Highlight" rel="stylesheet">
-
-
-
-
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
 
 		<link rel='stylesheet' type='text/css' href='css/semblance.css'>
@@ -17,8 +14,13 @@
 	</head>
 	<body>
 		<div id="intro">
+			<div id="introbg1"></div>
 			<div id="messenger">WELCOME</div>
 			<img id="logo" src="dramalogo.jpg">
+			<div id="quote1">Creating an wonderful drama is an art form, whereas comedy is just entertainment.<br><br>- Jason Reitman</div>
+			<div id="scroll">
+				<i class="fas fa-angle-double-down"></i> SCROLL DOWN
+			</div>
 		</div>
 		<div id="gallery">
 			<div id="galleryhead">
