Added everything on cover except the navbar

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 			<div id="messenger">WELCOME</div>
 			<img id="logo" src="dramalogo.jpg">
 			<div id="quote1">Creating an wonderful drama is an art form, whereas comedy is just entertainment.<br><br>- Jason Reitman</div>
+			<div id="quote2">In the end, Everything's a gag. <br><br>- Charlie Chaplin</div>
 			<div id="scroll">
 				<i class="fas fa-angle-double-down"></i> SCROLL DOWN
 			</div>
