Make sizing more adaptable

--- a/index.html
+++ b/index.html
@@ -46,20 +46,21 @@
 				events
 			</div>	
 			<div id="detail">
-				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+				<div id="detailheading">Event #</div>
+				fermentum dui faucibus in ornare quam viverra orci sagittis eu volutpat odio facilisis mauris sit amet massa vitae tortor condimentum lacinia quis vel eros donec ac odio tempor orci dapibus ultrices in iaculis nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat
 			</div>
 			<div class="eventlist">
 				<div id="event1" class="event">
 					<img src="event.jpg" class="eventimg">
-					<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<p>
+					<p>nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat commodo sed egestas<p>
 				</div>
 				<div id="event2" class="event">
 					<img src="event.jpg" class="eventimg">
-					<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<p>
+					<p>nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat commodo sed egestas<p>
 				</div>
 				<div id="event3" class="event">
 					<img src="event.jpg" class="eventimg">
-					<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.<p>
+					<p>nunc sed augue lacus viverra vitae congue eu consequat ac felis donec et odio pellentesque diam volutpat commodo sed egestas<p>
 				</div>
 			</div>
 			<div id="eventcard">
@@ -92,6 +93,5 @@
 			}
     </script>
     <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
-    <script tyle="text/javascript" src="css/semblance.js"></script>
 	</body>	
 </html>
