--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Cormorant+Unicase|Dorsa|Open+Sans+Condensed:300|Six+Caps|Zilla+Slab+Highlight" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
 
-
 		<link rel='stylesheet' type='text/css' href='css/semblance.css'>
 		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
@@ -80,6 +79,30 @@
 			<div id="map">
 			</div>
 			<div id="contactinfo">
+				<div id="address">
+					<div class="contactgroupheading">
+						<i class="fas fa-map-marker-alt"></i>HEADING 1
+					</div>	
+					sit amet nulla facilisi morbi tempus iaculis urna id volutpat lacus laoreet non curabitur gravida arcu ac tortor dignissim convallis
+				</div>
+				<div id="phone">
+					<div class="contactgroupheading">
+						<i class="fas fa-phone"></i>HEADING 1
+					</div>	
+					XXXX-XXX-XXX
+				</div>
+				<div id="email">
+					<div class="contactgroupheading">
+						<i class="fas fa-at"></i> HEADING 1
+					</div>	
+					example@example.com
+				</div>
+				<div id="socialbox">
+					<i class="fab fa-twitter"></i>
+					<i class="fab fa-facebook-square"></i>
+					<i class="fab fa-google-plus-g"></i>
+					<i class="fas fa-share-square"></i>
+				</div>
 			</div>
 			<div id="contactbottom">
 			</div>
