--- a/index.html
+++ b/index.html
@@ -4,11 +4,8 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Semblance</title>
-		<link href="https://fonts.googleapis.com/css?family=Barlow+Semi+Condensed|Cormorant+Unicase|Dorsa|Open+Sans+Condensed:300|Six+Caps|Zilla+Slab+Highlight" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-
 		<link rel='stylesheet' type='text/css' href='css/semblance.css'>
-		<link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 	</head>
 	<body>
 		<div id="intro">
@@ -71,6 +68,14 @@
 			</div>
 			<div id="memberinfo">
 			</div>
+			<div id="memberinfotext">
+			</div>
+			<div id="membernames">
+			</div>
+			<div id="joinbox">
+				<input type="text" placeholder="E-mail">
+				<i class="fas fa-long-arrow-alt-right"></i>
+			</div>	
 		</div>
 		<div id="contact">
 			<div id="contacthead">
